2016-November-07
- version 139
- much improved (faster) 'subsref' methods for gds_library and gds_structure 
  objects.
- improved the speed of 'layerinfo' methods by eliminating element indexing.
- new 'layer' method for gds_element objects to query layer/data type, which
  is faster than field indexing.

2016-November-05
- version 137/138
- return [] in 'get_element_data' if an element does not have a requested 
  property instead of throwing an error.
- improved 'subsref' methods for gds_library and gds_structure objects that
  enable more complex indexing operations. E.g. it is now possible to
  write S(10).xy to get the xy record of the 10th element in a
  structure without having to copy the element first.
- update to Clipper library version 6.4

2016-October-24
- version 136
- finally squashed bug in gdsio::now
- mxlist.h: conform to C99 (default for GCC 5)
- Update README

2016-September-08
- version 135
- improve display methods to more closely conform to other display
  methods in Octave/Matlab (e.g., indent element data).
- remove superfluous ':' in display of reference elements.    

2016-September-06
- version 134
- new methods '@gds_structure/refrename.m' and '@gds_library/srename.m'
  to structures from a library together will all references to the structure.
- fix typo in 'Contents.m'
- improve methods that return gds_element properties with error checking.
- add '@gds_element/prop' method that returns user defined element properties.

2016-September-04
- version 133
- fix reading of element properties. Was completely broken.
- make writing of element properties safer by checking if
  'attr' and 'name' fields are present in a property structure during writing.
- fixed a bug in 'gdsio.c::now'.
- 'layerinfo' method for gds_structure objects.
- change display method for gds_element objects to display the number of
  elements in a compound element in brackets after the element type.
  Same style as in structure display method.          

2016-August-28