@@ -1,3 +1,8 @@
+2016-November-14
+- version 140
+- fixed the remaining bugs in the 'subsref' methods for gds_library and gds_structure 
+  objects.
+
 2016-November-07
 - version 139
 - much improved (faster) 'subsref' methods for gds_library and gds_structure 
